# pre-commit-hooks

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  README.md  npm-test  pyproject.toml  renovate.json
.github/workflows/: pre-commit.yml
.junie/: guidelines.md
src/andrewaylett_pre_commit_hooks/: __init__.py  cog.py  common.py  init_hooks.py  uv_run.py
src/pre_commit_hooks/: __init__.py  cog.py
tests/: __init__.py  conftest.py  test_cog_file.py  test_hook.py  test_repo.py
tests/cog/: __init__.py  conftest.py  test_file_finding.py  test_integration.py  test_processing.py
tests/init_hooks/: __init__.py  test_add_hooks_to_repos.py  test_config_management.py  test_file_operations.py  test_integration.py
tests/uv_run/: __init__.py  conftest.py  test_integration.py  test_uv_run.py
