[project]
name = "andrewaylett-pre-commit-hooks"
version = "0.1.0"
description = "Andrew's pre-commit hooks"
readme = "README.md"
authors = [
  { name = "Andrew Aylett", email = "andrew@aylett.co.uk" }
]
requires-python = ">=3.11"
dependencies = [
  "cogapp>=3.5.1",
  "ruamel.yaml>=0.17.0",
  "uv>=0.7.20",
]

[dependency-groups]
dev = [
  "pytest>=7.4.0",
  "ruff>=0.12.0",
  "pre-commit>=4.2.0",
  "pyyaml>=6.0",
  "pre-commit-uv>=4.1.4",
  "pytest-xdist>=3.8.0",
  "pytest-env>=1.1.5",
  "pytype>=2024.10.11; python_version < '3.13'",
  "poethepoet>=0.36.0",
]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E4", "E7", "E9",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # Ruff
  "RUF",
  # isort
  "I",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-n auto --durations=0"
env = [
  "FORCE_PRE_COMMIT_UV_PATCH=1"
]

[tool.pytype]
inputs = ['src/andrewaylett_pre_commit_hooks']

[project.scripts]
pre-commit-cog = "andrewaylett_pre_commit_hooks.cog:main"
pre-commit-init-hooks = "andrewaylett_pre_commit_hooks.init_hooks:main"
pre-commit-uv-run = "andrewaylett_pre_commit_hooks.uv_run:main"

[tool.poe.tasks.check]
sequence = ["format", "lint", "type", "test"]
help = "Format and run all static checks"
ignore_fail = "return_non_zero"

[tool.poe.tasks.format]
cmd = "uv run ruff format"
help = "Run Ruff to format code"

[tool.poe.tasks.lint]
cmd = "uv run ruff check --fix --unsafe-fixes"
help = "Run Ruff to check and fix code"

[tool.poe.tasks.type]
cmd = "uv run pytype"
help = "Run Pytype for type checks"

[tool.poe.tasks.test]
cmd = "uv run pytest"
help = "Run Pytest for unit tests"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
